--- a/index.html
+++ b/index.html
@@ -3,18 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Game</title>
 
     <!-- RFR Favicon -->
     <link rel="icon" type="image/png" href="rfricon.png">
-
-    <!-- Grab Favicon from Google (Might be unsupported in the future) -->
-    <!-- <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=css-tricks.com"> -->
-    <!-- FontAwesome V5 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="quiz-container">
+        <!-- Quiz Box -->
+        <div id="quiz-box">
+            <h1 id="question-number"></h1>
+            <h2 id="question-text">Loading Questions...</h2>
+            <div id="timer">Time Left: <span id="time-left">10</span>s</div>
+            <div id="choices-container">
+                <!-- Populated Dynamically -->
+            </div>
+            <button type="button" id="next-btn" class="btn">Next</button>
+        </div>
+
+        <!-- Loader -->
+        <div id="loader" style="display: none">
+            <h2>Loading High Scores...</h2>
+        </div>
+
+        <!-- High Scores -->
+        <div id="high-score-container" style="display: none">
+            <table id="high-scores-table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Score</th>
+                        <th>Date</th>
+                    </tr>
+                </thead>
+                <tbody id="high-scores-list">
+                    
+                </tbody>
+            </table>
+            <button type="button" id="play-again-btn" class="btn">Play Again</button>
+        </div>
+    </div>
     <!-- Script -->
      <script src="script.js"></script>
 </body>
